# GodProfile

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.html
examples/: quickstart.py
src/godprofile_mcp/: prompts.py  resources.py  server.py
src/godprofile_mcp/core/: animated_banner.py  bento_layout.py  blog_fetcher.py  github_ci_automation.py  github_trophies.py  icon_marquee.py  isometric_3d_globe.py  neural_bezier_engine.py  snake_game_injector.py  spotify_now_playing.py  svg_rendering.py  terminal_emulator.py  wakatime_metrics.py
