[project]
name = "godprofile-mcp"
version = "0.1.0"
description = "MCP server for forging god-tier GitHub profiles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
]

[project.scripts]
godprofile-server = "godprofile_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
